--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -36,7 +36,7 @@ check_stack_SOURCES = utils/check_stack.c \
                       $(UTIL_DIR)/stack.h
 
 check_format_SOURCES = utils/check_format.c \
-                       $(UTIL_DIR)/heap-format.h
+                       $(UTIL_DIR)/string.h
 
 # Types Tests
 
@@ -96,7 +96,7 @@ check_stack_frame_SOURCES = interpreter/check_stack_frame.c \
                             $(INTERPRETER_DIR)/stack_frame.h \
                             $(INTERPRETER_DIR)/variable.h \
                             $(TYPES_DIR)/object.h \
-                            $(UTILS_DIR)/list.h
+                            $(UTIL_DIR)/list.h
 
 # Expression Tests
 
@@ -104,24 +104,24 @@ EXPR_DIR = $(SRC_DIR)/expressions
 
 check_define_SOURCES = expressions/check_define.c \
                        expressions/parse.h \
-                       $(EXPR_DIR)/definition_expr.h
+                       $(EXPR_DIR)/definition.h
 
 check_if_SOURCES = expressions/check_if.c \
                    expressions/parse.h \
-                   $(EXPR_DIR)/if_expr.h
+                   $(EXPR_DIR)/if.h
 
 check_lambda_SOURCES = expressions/check_lambda.c \
                        expressions/parse.h \
-                       $(EXPR_DIR)/lambda_expr.h
+                       $(EXPR_DIR)/lambda.h
 
 check_let_SOURCES = expressions/check_let.c \
                     expressions/parse.h \
-                    $(EXPR_DIR)/let_expr.h
+                    $(EXPR_DIR)/let.h
 
 check_evaluation_SOURCES = expressions/check_evaluation.c \
                            expressions/parse.h \
-                           $(EXPR_DIR)/evaluation_expr.h
+                           $(EXPR_DIR)/evaluation.h
 
 check_cond_SOURCES = expressions/check_cond.c \
                      expressions/parse.h \
-                     $(EXPR_DIR)/cond_expr.h
+                     $(EXPR_DIR)/cond.h
