Builtin math functions are added. A rational number type is added. Scanner is modified to include the corresponding rational number token. Tests are updated because of the change in the behavior of integer division. The Theory Lisp standard library (files under src/lib directory) is now licensed separately, and it is under the GNU LGPL v3 license. This change is done because distributing the standard library under GNU GPL v3 would force all programs written in Theory Lisp to be under the same license. The interpreter is still under GNU GPL v3, however. A few builtin IO functions are added. PN expressions and automatons did not have PN arities. This was an unnoticed bug. Now they also have PN arities. Various bugs related to memory management are fixed. A probabilistic base machine and probabilistic transition condition is added to primitives.tl Documentation is updated. Now, the documentation of expressions is complete.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -9,6 +9,8 @@ libtlisp_la_SOURCES =\
     types/integer.h\
     types/real.c\
     types/real.h\
+    types/rational.c\
+    types/rational.h\
     types/string.c\
     types/string.h\
     types/pair.c\
@@ -78,8 +80,8 @@ libtlisp_la_SOURCES =\
     builtin/include.h\
     builtin/object.c\
     builtin/object.h\
-    builtin/display.c\
-    builtin/display.h\
+    builtin/io.c\
+    builtin/io.h\
     builtin/boolean.c\
     builtin/boolean.h\
     builtin/arithmetic.c\
@@ -92,6 +94,8 @@ libtlisp_la_SOURCES =\
     builtin/eval.h \
     builtin/error.c \
     builtin/error.h \
+    builtin/math.c \
+    builtin/math.h \
     automaton/automaton.c \
     automaton/automaton.h
 
